@@ -1,3 +1,8 @@
+2012-04-03  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/pack18.adb: New test.
+	* gnat.dg/pack18_pkg.ads: New helper.
+
 2012-04-03  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/52808
